test/error/parse/ExpectBrace3Close.mod
MODULE ExpectBrace3Close;
VAR s: SET;
BEGIN
  s := {1, 2;
END ExpectBrace3Close.
